# neryba

./: .gitignore  Cargo.toml  README.md
src/: board.rs  datagen.rs  eval.rs  lib.rs  main.rs  nnue.rs  nnue2.rs  search.rs  uci.rs  zobrist.rs
